feat: ensure authetication through jwt and cookies
